# gr-oot

./: CMakeLists.txt  MANIFEST.md  README.md  plutoInstall.sh
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-ootConfig.cmake
docs/: CMakeLists.txt  README.oot
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
examples/: 1grtest.grc  1grtest.py  2grusrptest.grc  2usrptest.grc  2usrptest.py  3oot1.grc  3oot1.py  4oot2.grc  4oot2.py  5oot3.grc  5oot3.py  6oot4.grc  6plutotest.grc  grtest.py  oot1.py  oot2.py  oot3.py  oot4.py  ootpy.py  plutotest.py  usrptest.py
grc/: CMakeLists.txt  oot_multiply.block.yml  oot_multiplyconf.block.yml  oot_multiplyconf2.block.yml  oot_multiplypy.block.yml
include/oot/: CMakeLists.txt  multiply.h  multiplyconf.h
lib/: CMakeLists.txt  multiply_impl.cc  multiply_impl.h  multiplyconf2_impl.cc  multiplyconf2_impl.h  multiplyconf_impl.cc  multiplyconf_impl.h
python/: CMakeLists.txt  __init__.py  multiplypy.py  qa_multiply.py  qa_multiplyconf.py  qa_multiplypy.py
python/bindings/: CMakeLists.txt  multiply_python.cc  multiplyconf_python.cc  python_bindings.cc
python/oot/: CMakeLists.txt  __init__.py  multiplypy.py  qa_multiply.py  qa_multiplyconf.py  qa_multiplyconf2.py  qa_multiplypy.py
python/oot/bindings/: CMakeLists.txt  multiply_python.cc  multiplyconf2_python.cc  multiplyconf_python.cc  python_bindings.cc
python/oot/bindings/docstrings/: multiplyconf2_pydoc_template.h  multiplyconf_pydoc_template.h
(+6 files in other folders)
